# signal-hook

./: Cargo.toml
.github/workflows/: test.yaml
signal-hook-consts/: Cargo.toml  build.rs
signal-hook-consts/src/: constants.c  lib.rs
signal-hook-sys/: build.rs
signal-hook-sys/src/: extract.c  lib.rs
src/: pipe.rs
src/iterator/: exfiltrator.rs
