[package]
name = "signal-hook"
version = "0.2.1"
authors = [
    "Michal 'vorner' Vaner <vorner@vorner.cz>",
    "Thomas Himmelstoss <thimm@posteo.de>",
]
description = "Unix signal handling"
documentation = "https://docs.rs/signal-hook"
repository = "https://github.com/vorner/signal-hook"
readme = "README.md"
keywords = ["signal", "unix", "daemon"]
license = "Apache-2.0/MIT"
edition = "2018"

[badges]
maintenance = { status = "actively-developed" }

[features]
default = ["iterator"]
iterator = ["signal-hook-consts"]

[workspace]
members = [
    "./",
    "signal-hook-consts",
    "signal-hook-registry",
    "signal-hook-tokio",
    "signal-hook-mio",
    "signal-hook-async-std",
]

[dependencies]
libc = "~0.2"
signal-hook-consts = { version = "~0.1", path = "signal-hook-consts", optional = true }
signal-hook-registry = { version = "~1.2", path = "signal-hook-registry" }

[dev-dependencies]
serial_test = "~0.5"

[build-dependencies]
cc = "1.0"

[package.metadata.docs.rs]
all-features = true
