[package]
name = "signal-hook-consts"
version = "0.1.0"
authors = [
    "Michal 'vorner' Vaner <vorner@vorner.cz>",
]
description = "Constants for signal-hook, the ones not in libc"
documentation = "https://docs.rs/signal-hook-consts"
repository = "https://github.com/vorner/signal-hook"
keywords = ["signal", "unix", "daemon"]
license = "Apache-2.0/MIT"
edition = "2018"

[dependencies]

[build-dependencies]
cc = "1.0"

[package.metadata.docs.rs]
all-features = true
